Making it compatible with java 11 to List. ".collect(Collectors.toList())" instead of "toList()"